syntax="proto3";
package protos;

import "common.proto";
import "protoHero.proto";

//邮件_情报_增援部队
message Reinforce{
	int64 uid = 1;			//所属玩家
	string name = 2;		//所属玩家
	string allianceName = 3;//所属联盟
	string allianceFlag = 4;//联盟旗帜
	string allianceMinName = 5;//联盟缩写
	repeated protos.Hero hero = 6;			//英雄
	repeated protos.Unit unit = 7;			//士兵
	int32 icon = 8;		//头像
	int32 iconB = 9;		//头像框
	int32 level = 10;		//所属玩家级别
}
//邮件_侦察情报
message Intelligence{
	int64 sid = 1;			//主键
	int64 uid = 2;			//情报所属玩家
	int64 tarUid = 3;		//被侦察玩家
	string tarName = 4;		//被侦察玩家名
	string tarAllianceName = 5;//被侦察玩家公会
	string tarAllianceFlag = 6;//被侦察玩家联盟旗帜
	string tarAllianceMinName = 7;//被侦察玩家联盟缩写
	
	int32 tp = 8;			//被侦察类型 1采集点 3玩家城市 6王城 7玩家扎营
	repeated protos.Hero hero = 9;			//防守英雄
	repeated protos.Unit unit = 10;			//防守士兵
	repeated protos.IdNum res = 11;			//可搬运资源(限侦玩家城市)
	repeated Reinforce reinforce = 12; //增援部队(限侦玩家城市)
	
	int32 k = 13;			//坐标国
	int32 x = 14;			//坐标X
	int32 y = 15;			//坐标Y
	int32 tarIcon = 16;		//头像
	int32 tarIconB = 17;		//头像框
	int32 tarLevel = 18;		//玩家级别
}


//邮件
message Mail {
    int64 sid = 1;			// 主键
    int32 tp = 2; 			// 类型:1系统2玩家3侦查情报4战报5采集资源报告6联盟7活动
	int64 fromUid = 3; 	// 发送者玩家UID
	string fromName = 4; 	// 发送者玩家名
    int32 cid = 5;			// 邮件模板表ID
	
	string params = 6; 	// 标题正文格式化用参数集json
		//params. String desc; //开发测试注释
		//params. String title; //原始标题(系统/GM/玩家手写的标题)
		//params. String content; //原始正文(系统/GM/玩家手写的正文)
		//params. String allianceName; //联盟名
		//params. String allianceMinName; //联盟简称
		//params. Long allianceId; //联盟sid
		//params. String name; //角色名
		//params. Long uid; //角色uid
		//params. Integer level; //角色level
		//params. Integer vipLv; //VIP等级
		//params. Integer nobilityLv; //爵位等级
		//params. String tarName; //目标角色名(运输,)
		//params. Integer resTp2; //采集点tp2(mineConfig.type2)
		//params. Integer resLv; //采集点level(mineConfig.level)
		//params. Integer resId; //获得资源ID(resTypeConfig.id)
		//params. Long resNum; //资源数量(单种采集)
		//params. Integer posK; //坐标K
		//params. Integer posX; //坐标X
		//params. Integer posY; //坐标Y
		//params. Integer monTp2; //怪物ID(monsterConfig.type2 王城怪/探索不带)
		//params. Integer monLv; //怪物级别(monsterConfig.level 王城怪/探索不带)
		//params. Integer guardId; //守卫ID(guardConfig.id    野怪/王城怪/探索怪)
		//params. List<DataNum> res; //资源idNum组(运输,)
		//params. Long hospitalCap; //医院容量
		//params. Long dieNum; //医院超容死亡数量
		//params. Integer gatherResult; //采集结果(0败1成)
		//params. Integer scoutType; //侦察类型(1侦城成功2被侦城成功3侦野成功4被侦野成功5侦失败6被侦失败)
		
	repeated protos.IdNum item = 8; 		// 附件道具
	repeated protos.IdNum res = 9;			// 附件资源
    bool read = 10;		// 己阅
    bool take = 11;		// 己领(无附件默认false)
    bool favor = 12;		// 已收藏(过期仍保留)
    int64 time = 13;		// 发送时间
    int64 timeOut = 14;	// 过期时间
    int64 reportId = 15;	// 附件战报ID
	
    int64 intelId = 16;	// 附件情报ID
	bool win = 17; 		// 战报使用是否胜利
}
message MailPK {
    int64 sid = 1;	// ID
}


//邮件计数
message MailNum {
    int64 uid = 1; 		// 
    int32 unread = 2; 		// 未读邮件数
    int32 all = 3; 		// 邮件数
}

//以上数据结构-------------------------------------------------//
//-------------------------------------------------------------//
//以下协议-----------------------------------------------------//


//501 邮件请求
message MailGet_C {
	int32 protoId = 1;//[default = 501];		//生成mapping
	int64 from = 2;//增量取大于此值的
}
message MailGet_S {
	int32 protoId = 1;//[default = 502];		//生成mapping
	repeated Mail mail = 2;			//邮件(上线不带)
	repeated MailNum mailNum = 3;	//邮件计数(上线带)
}

//503 邮件删除
message MailDel_C {
	int32 protoId = 1;//[default = 503];		//生成mapping
	repeated int64 sids = 2;//邮件id数组
	bool force = 3;//无视未收取的附件
}

//505 邮件读
message MailRead_C {
	int32 protoId = 1;//[default = 505];		//生成mapping
	repeated int64 sids = 2;//邮件id数组
}

//507 邮件收附件
message MailTake_C {
	int32 protoId = 1;//[default = 507];		//生成mapping
	repeated int64 sids = 2;//邮件id数组
}
message MailTake_S {
	int32 protoId = 1;//[default = 508];		//生成mapping
}

//509 邮件收藏
message MailFavor_C {
	int32 protoId = 1;//[default = 509];		//生成mapping
	int64 sid = 2;//邮件id
	int32 cancel = 3;//0收藏 1取消
}

//511 战报读取
message ReadReport_C {
	int32 protoId = 1;//[default = 511];		//生成mapping
	int64 sid = 2;//战报id
}
message ReadReport_S {
	int32 protoId = 1;//[default = 512];		//生成mapping
	int64 sid = 2;							//战报id
	string combatRecord = 3;  //战报
}

//513 情报读取
message ReadIntel_C {
	int32 protoId = 1;//[default = 513];		//生成mapping
	int64 sid = 2;//情报id
}
message ReadIntel_S {
	int32 protoId = 1;//[default = 514];		//生成mapping
	int64 sid = 2;//情报id
	Intelligence intel = 3;//情报
}

//515 私人邮件
message UserMail_C {
	int32 protoId = 1;//[default = 515];		//生成mapping
	string title = 2;							//标题
	string content = 3;						//正文
	repeated int64 toUid = 4;							//发给玩家UID
}
message UserMail_S {
	int32 protoId = 1;//[default = 516];		//生成mapping
}

//517 发送全盟邮件
message AllianceMail_C {
	int32 protoId = 1;//[default = 517];	
	string title = 2;							//标题
	string content = 3;						//正文
}
message AllianceMail_S {
	int32 protoId = 1;//[default = 518];		//生成mapping
}

//519 国王发全服邮件
message KingdomMail_C {
	int32 protoId = 1;//[default = 519];	
	string title = 2;							//标题
	string content = 3;						//正文
}
message KingdomMail_S {
	int32 protoId = 1;//[default = 520];		//生成mapping
}

//522 增量更新邮件数
message MailNumAdd_C {
	int32 protoId = 1;//[default = 522];	
	int32 newNum = 2;							//新增邮件数量 MailNum.all +
	int32 unreadNum = 3;						//新增加邮件数量 MailNum.unread +
}
